Add documentation for orders
